--- a/src/containers/NewDoc.css
+++ b/src/containers/NewDoc.css
@@ -1,8 +1,8 @@
-.NewNote form {
+.NewDoc form {
   padding-bottom: 15px;
 }
 
-.NewNote form textarea {
+.NewDoc form textarea {
   height: 300px;
   font-size: 24px;
 }
