--- a/src/containers/Home.css
+++ b/src/containers/Home.css
@@ -12,7 +12,7 @@
     color: #999;
   }
 
-  .Home .notes h4 {
+  .Home .docs h4 {
     font-family: "Open Sans", sans-serif;
     font-weight: 600;
     overflow: hidden;
@@ -20,6 +20,6 @@
     white-space: nowrap;
     text-overflow: ellipsis;
   }
-  .Home .notes p {
+  .Home .docs p {
     color: #666;
   }
